// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Image debe de mostrar el componente correctamente con el titulo personalizado 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;

exports[`Product Image debe de mostrare el componente con el nombre del proudcto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
